--- a/lab/lab03/SimpleMyDot/app/src/main/res/values/strings.xml
+++ b/lab/lab03/SimpleMyDot/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SimpleMyDot</string>
     <string name="random_dot">RANDOM DOT</string>
+    <string name="clear_dot">CLEAR DOT</string>
 </resources>
