share to facebook and change color not change radius

--- a/lab/lab04/SimpleMyDot/app/src/main/res/values/strings.xml
+++ b/lab/lab04/SimpleMyDot/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="send_to" />
     <string name="dialog_fire_missiles" />
     <string name="fire" />
+    <string name="sharing_text" />
+    <string name="share_title" />
 </resources>
