--- a/lab/lab04/SimpleMyDot/app/src/main/res/values/strings.xml
+++ b/lab/lab04/SimpleMyDot/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="fire" />
     <string name="sharing_text" />
     <string name="share_title" />
+    <string name="open_activity">open activity</string>
 </resources>
