Finish Homework Lab05

--- a/lab/lab05/SimpleMyDot/app/src/main/res/values/strings.xml
+++ b/lab/lab05/SimpleMyDot/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="clear_dot">CLEAR DOT</string>
     <string name="undo">UNDO</string>
     <string name="share">SHARE</string>
+    <string name="descr_overflow_button" />
+    <string name="save">SAVE</string>
+    <string name="cancel">CANCEL</string>
 </resources>
