Can View Amount and Transaction but cannot edit and delete

--- a/lab/lab09/moneyflow/app/src/main/res/values/strings.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Moneyflow</string>
     <string name="add">ADD</string>
+    <string name="income">income</string>
+    <string name="expense">expense</string>
+
 </resources>
